# efl_ui_cc

./: LICENSE  README  meson.build
src/efl_ui_cc/: c_generator.c  class_db.c  efl_ui_json.c  main.c  main.h  meson.build
src/efl_ui_editor/: abstract_node_ui.eflui  abstract_tree_controller.c  base_ui.c  base_ui.eflui  children_item_ui.eflui  display_ui.c  json_generator.c  main.c  main.h  meson.build  new_children_item_ui.eflui  new_entry_item_ui.eflui  new_property_item_ui.eflui  object_generator.c  predictor_ui.c  predictor_ui.eflui  property_item_ui.eflui  property_name_ui.eflui  reorder_ui.c  reorder_ui.eflui  reorder_ui_linear_item.eflui  reorder_ui_part_item.eflui  reorder_ui_table_item.eflui  ui_helper.c  value_change_bool_ui.eflui  value_change_range_ui.eflui  value_change_text_ui.eflui  value_change_ui.c
src/examples/detail_display/: detail_display.eflui  main.c  meson.build
src/examples/simple_button/: main.c  meson.build  simple_button.json
src/lib/: Efl_Ui_Format.h  Internal.h  abstract_tree.c  abstract_tree.h  abstract_tree_private.h  efl_ui_format_privat.h  eolian_bridge.c  json.h  meson.build  outputter.c  parser.c  predictor.c  predictor.h  ui_tree.c  validator.c
src/tests/: meson.build  starter.c  test_abstract_tree_controller.c  test_predictor.c  testcase1.eflui  testcase1.json  testcase2.eflui  testcase2.json  testcase3.eflui  testcase3.json  testcase4.eflui  testcase4.json  testcase5.eflui  testcase5.json  testcase6.eflui  testcase6.json  testcase7.eflui  testcase7.json  testcase8.eflui
